--- a/chickenPage.html
+++ b/chickenPage.html
@@ -34,7 +34,7 @@
                 of my no colonel shyness. Such on help ye some door if in. Laughter 
                 proposal laughing any son law consider. Needed except up piqued an. 
             </div>
-            <img src="../images/chicken2.jpg" alt="spaghetti2" class="chickenImg">
+            <img src="../images/chicken2.jpg" alt="chicken2" class="chickenImg">
             <br>
             <br>
             <table class="align" style="width:50%">
