--- a/macandcheesePage.html
+++ b/macandcheesePage.html
@@ -34,7 +34,7 @@
                 of my no colonel shyness. Such on help ye some door if in. Laughter 
                 proposal laughing any son law consider. Needed except up piqued an. 
             </div>
-            <img src="../images/macandCheese2.jpg" alt="spaghetti2" class="spaghettiImg">
+            <img src="../images/macandCheese2.jpg" alt="macandCheese" class="spaghettiImg">
             <br>
             <br>
             <table class="align" style="width:50%">
