--- a/steakPage.html
+++ b/steakPage.html
@@ -34,7 +34,7 @@
                 of my no colonel shyness. Such on help ye some door if in. Laughter 
                 proposal laughing any son law consider. Needed except up piqued an. 
             </div>
-            <img src="../images/steak.jpg" alt="spaghetti2" class="spaghettiImg">
+            <img src="../images/steak.jpg" alt="steak" class="spaghettiImg">
             <br>
             <br>
             <table class="align" style="width:50%">
